добавил сождание и получение товаров
